añadido reservas